# hr-practice

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
hr_practice/: __init__.py  dataset.py  features.py  plots.py
hr_practice/modeling/: predict.py  train.py
notebooks/: HR data Practice.ipynb
